demo page use the `dist` builds

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <!-- <script data-bg="trail" data-x-start="0" data-y-start="0" src="./dist/vi-bg.umd.cjs"></script> -->
 
       <script type="module">
-        import { getConfig, getDefaultConfig, init, pause, paused, play, setConfig } from "./src/index.js";
+        import { getConfig, getDefaultConfig, init, pause, paused, play, setConfig } from "./dist/vi-bg.js";
         const $code = document.querySelector('code');
         let defaultConfig;
         const ignoreConfig = ['xStart', 'yStart', 'paused'];
